# wpi_sample_return_robot_challenge

./: .gitignore  dec_16_2013_notes.txt  websites_and_resources.txt
ROS_OpenCV_interfacing/openCV_code/: README.md
ROS_OpenCV_interfacing/testcamera/: CMakeLists.txt  mainpage.dox  manifest.xml
arduino_code/: beaglefetch  beaglefetch.c  drive.py  drive_test.py
arduino_node/: todo.txt
beaglebone_code/: Makefile  beaglebone_connect  beaglebone_connect.c  beaglefetch.c  beaglefetch.py  configuration.py  controller.h  godog.sh  links_for_bryant
camera_calibration/: cal.yml  ost.ini
design/: framing.docx  parts calculations.xlsx  specifications and parts.ods
design_document/: RPI_design_document.tex
friendfetch/: friendfetch.ino  friendfetch_design.txt
gazebo/: .README.md.swp  .camera-location.world.swp  .landscape-mod.world.swp  .landscape.world.swo  .landscape.world.swp  .simlaunch.launch.swp  .spin_robot.sh.swp  .wpi-testworld.world.swp  README.md  camera-location.world  landscape-mod.world  landscape.world  landscape_robot_plugin.world  landscape_with_background.world  landscape_with_junk.world  simlaunch.launch  spin_robot.sh  wpi-heightmap.xcf  wpi-testworld.world
gazebo/husky_plugin/: CMakeLists.txt  manifest.xml
gazebo/husky_plugin/include/husky_plugin/: husky_plugin.h
gazebo/husky_plugin/src/: husky_plugin.cpp
launch/: .run.launch.swp  .run_stereo.launch.swp  run.launch  run_stereo.launch  startup_launch.sh
meeting_notes/: apr_30_2014_meeting_notes.txt  apr_9_2014_meeting_notes.txt  april_16_team_meeting.txt  dec_16_2013_notes.txt  feb_26_2014_meeting_notes.txt  feb_5_2014_meeting_notes.txt  jan_22_2014_meeting_notes.txt  jan_29_2014_meeting_notes.txt  mar_19_2014_meeting_notes.txt  march_26_2014_meeting_notes.txt  may_7_2014_meeting_notes.txt
rockie_code/: .README.md.swp  README.md
rosbag/: loop_rosbag.sh
rtabmap/: README
scripts/: jpegs_to_mpeg.sh  restrict_webcam_bandwidth.sh  rockie_setup_script.sh  run_camera_calibration.sh
(+702 files in other folders)
